opam-version: "1.2"
name: "ibutsu"
version: "0.1"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: "Frederic Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/ibutsu"
bug-reports: "https://github.com/let-def/ibutsu"
license: "ISC"
dev-repo: "https://github.com/let-def/ibutsu.git"
build: [
  ["jbuiler" "build" "-p" name]
]
depends: [
  "jbuilder" {build}
  "result"
]
available: [ ocaml-version != "4.01.0" ]
