opam-version: "1.2"
name: "ibutsu"
version: "0.1"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: "Frederic Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/ibutsu"
bug-reports: "https://github.com/let-def/ibutsu"
license: "ISC"
dev-repo: "https://github.com/let-def/ibutsu.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build & >= "1.0"}
  "result"
]
available: [ ocaml-version != "4.01.0" ]
