(library
 (name stb_perlin)
 (public_name ibutsu.stb_perlin)
 (wrapped false)
 (modules stb_perlin)
 (foreign_stubs (language c) (names stb_perlin_stubs))
 (synopsis "Perlin noise generation"))

(executable
 (name test)
 (modules test)
 (modes byte native)
 (libraries stb_perlin))

(rule
 (alias runtest)
 (action
  (with-stdout-to test.bc.output 
   (setenv "LD_LIBRARY_PATH" "." 
    (run %{exe:test.bc})))))

(rule
 (alias runtest)
 (action
  (with-stdout-to test.exe.output (run %{exe:test.exe}))))

(rule
 (alias runtest)
 (deps test.bc)
 (action (diff test.expected test.bc.output)))

(rule
 (alias runtest)
 (deps test.exe)
 (action (diff test.expected test.exe.output)))
